[tool.poetry]
name = "test_pypy"
version = "0.1.0"
description = ""
authors = ["sakura1116vg <sakura1116vg@example.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
flake8 = "^4.0.1"
pytest = "6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
